<resources>
    <string name="app_name">Room Shopping List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="item_name">Item name</string>
    <string name="item_count">Item count</string>
    <string name="item_price">Item price</string>
    <string name="name">Name</string>
    <string name="count">Count</string>
    <string name="price">Price</string>
    <string name="dialog_title">Add new item</string>
    <string name="dialog_message">Add new item to the shopping list</string>
    <string name="dialog_ok">ADD</string>
    <string name="dialog_cancel">CANCEL</string>
</resources>
